test/types/records/compilerErrors/deleteRecordMessage.chpl
var D = {1..10};
delete D;
