test/types/records/compilerErrors/deleteRecordMessage.good
deleteRecordMessage.chpl:2: error: delete not allowed on records
